5sem/IFJ/IFJ-Project/tests/syntax_errors/test_syntax_mult_mult.wren
import "ifj25" for Ifj

// SYNTAX ERROR: Missing operand between operators
// Expected error: SYNTAX_ERROR (2)

class Program {
	static main() {
		var x
		x = 5 * * 3
	}
}

